--- a/Image/about.css
+++ b/Image/about.css
@@ -13,7 +13,7 @@
   }
   
   header {
-    background-color: #00bcd4;
+    background-color: orange;
     color: #fff;
     padding: 2rem 1rem;
     text-align: center;
